// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flowcolumns Components should render IconColumn 1`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-plain"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 2`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-not-modified"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 3`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-redirect"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 4`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-image"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 5`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-js"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 6`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-css"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 7`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-document"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 8`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-plain"
  />
</td>
`;

exports[`Flowcolumns Components should render IconColumn 9`] = `
<td
  className="col-icon"
>
  <div
    className="resource-icon resource-icon-plain"
  />
</td>
`;

exports[`Flowcolumns Components should render MethodColumn 1`] = `
<td
  className="col-method"
>
  GET
</td>
`;

exports[`Flowcolumns Components should render QuickActionsColumn 1`] = `
<td
  className="col-quickactions"
>
  <div>
    <div
      className="quickaction"
    >
      <i
        className="fa fa-fw fa-ellipsis-h"
      />
    </div>
  </div>
</td>
`;

exports[`Flowcolumns Components should render SizeColumn 1`] = `
<td
  className="col-size"
>
  14b
</td>
`;

exports[`Flowcolumns Components should render StatusColumn 1`] = `
<td
  className="col-status"
  style={
    Object {
      "color": "darkred",
    }
  }
/>
`;

exports[`Flowcolumns Components should render TLSColumn 1`] = `
<td
  className="col-tls col-tls-http"
/>
`;

exports[`Flowcolumns Components should render TimeColumn 1`] = `
<td
  className="col-time"
>
  3s
</td>
`;

exports[`Flowcolumns Components should render TimeColumn 2`] = `
<td
  className="col-time"
>
  ...
</td>
`;

exports[`Flowcolumns Components should render TimeStampColumn 1`] = `
<td
  className="col-start"
>
  1999-12-31 23:00:00.000
</td>
`;

exports[`Flowcolumns Components should render pathColumn 1`] = `
<td
  className="col-path"
>
  <i
    className="fa fa-fw fa-exclamation pull-right"
  />
  http://address:22/path
</td>
`;

exports[`Flowcolumns Components should render pathColumn 2`] = `
<td
  className="col-path"
>
  <i
    className="fa fa-fw fa-pause pull-right"
  />
  <i
    className="fa fa-fw fa-times pull-right"
  />
  http://address:22/path
</td>
`;
